# embyx

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  run.py
.github/workflows/: docker-build.yml  tests.yml
docs/: main-pipeline.md
scripts/: playlist_move.py  translate.py  translate_compare.py
src/: __init__.py  archive.py  fill_actor.py  main.py  mapping.py  mapping_monitor.py  merge.py  monitor.py  playlist_move.py  rss.py  translate.py
src/core/: __init__.py  config.py  logger.py
src/embyx_monitor_runtime/: __init__.py  fill_actor_api.py
src/embyx_runtime/: __init__.py  fill_actor_api.py
src/utils/: __init__.py  avid.py  cleanup.py  emby.py  freshrss.py  magnet.py  nfo.py  translator.py  type_check.py  web.py
src/utils/clouddrive/: __init__.py  clouddrive.py  clouddrive_pb2.py  clouddrive_pb2_grpc.py
tests/: conftest.py  test_archive.py  test_cleanup.py  test_clouddrive.py  test_fill_actor_runtime_api.py  test_freshrss.py  test_magnet_cleanup.py  test_magnet_parsing.py  test_mapping_incremental.py  test_mapping_monitor.py  test_mapping_monitor_legacy.py  test_merge.py  test_nfo.py  test_rss.py  test_run_cleanup.py  test_utils_lazy_import.py  test_web.py
