[project]
name = "embyx"
version = "0.0.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aiofiles>=24.1.0",
  "colorlog>=6.9.0",
  "defusedxml>=0.7.1",
  "grpcio>=1.76.0",
  "grpcio-tools>=1.76.0",
  "httpx>=0.28.1",
  "humanfriendly>=10.0",
  "nyaapy>=0.7",
  "openai>=1.106.1",
  "pydantic>=2.11.3",
  "pydantic-settings>=2.9.1",
  "pyquery>=2.0.1",
  "tenacity>=9.1.2",
  "tqdm>=4.67.1",
  "typed-argument-parser>=1.10.1",
  "watchdog>=6.0.0",
]

[tool.ruff]
line-length = 140
extend-exclude = [
  "src/utils/clouddrive/clouddrive_pb2_grpc.py",
  "src/utils/clouddrive/clouddrive_pb2.py",
]

[tool.ruff.lint]
select = ['ALL']
ignore = [
  'Q000',    # Double quotes
  'PLC0414', # Import alias
  'D407',    # Lines for docstrings
  'ANN401',  # Any type
  'PERF203', # try-except in loop
  'D',       # pydocstyle
  'DTZ005',  # tz not set
  'PLW0603', # global variable
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "S101",    # Use of assert
  "PLR2004", # Use of magic value
  "ANN002",  # Missing type annotation for *args
  "ANN003",  # Missing type annotation for **kwargs
  "S108",    # Probable insecure usage of temporary file or directory
  "C901",    # Too complex
]

[tool.ruff.format]
quote-style = 'single'
indent-style = 'space'
line-ending = 'lf'

[dependency-groups]
dev = ["pytest-asyncio>=1.3.0", "ruff>=0.14.11"]
